Fix links of nav bar.

--- a/aboutme.html
+++ b/aboutme.html
@@ -21,10 +21,10 @@
   </head>
   <body>
     <ul> 
-      <li><a href="index.html">Home</a></li>
-      <li><a href="aboutme.html">About Me</a></li>
-      <li><a href="interests.html">Interests</a></li>
-      <li><a href="contact.html">Contact</a></li>
+      <li><a href="SWD-Website/index.html">Home</a></li>
+      <li><a href="SWD-Website/aboutme.html">About Me</a></li>
+      <li><a href="SWD-Website/interests.html">Interests</a></li>
+      <li><a href="SWD-Website/contact.html">Contact</a></li>
     </ul>
     <div id="aboutme-content">
       <h2>About Me</h2>
