--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
   <title>Website</title>
   <script src="https://code.jquery.com/jquery.min.js"></script>
   <script src="script.js"></script>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="SWD-Website/style.css">
 </head>
 <body class="index-body">
   <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="aboutme.html">About Me</a></li>
-      <li><a href="interests.html">Interests</a></li>
-      <li><a href="contact.html">Contact</a></li>
+      <li><a href="SWD-Website/index.html">Home</a></li>
+      <li><a href="SWD-Website/aboutme.html">About Me</a></li>
+      <li><a href="SWD-Website/interests.html">Interests</a></li>
+      <li><a href="SWD-Website/contact.html">Contact</a></li>
     </ul>
   <div id="home-content">
     <h1><em>Hello</em>, my name is Sydney!</h1>
-    <a href="aboutme.html">About Me</a>
-    <a href="interests.html">My Interests</a> <!-- Maybe favourite songs or photo gallery -->
-    <a href="contact.html">Contact Me</a>
+    <a href="SWD-Website/aboutme.html">About Me</a>
+    <a href="SWD-Website/interests.html">My Interests</a> <!-- Maybe favourite songs or photo gallery -->
+    <a href="SWD-Website/contact.html">Contact Me</a>
   </div>
 </body>
 </html>
