--- a/interests.html
+++ b/interests.html
@@ -2,15 +2,15 @@
 <html>
   <head>
     <title>Interests</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="SWD-Website/style.css">
     <script src="script.js"></script>
   </head>
   <body>
     <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="aboutme.html">About Me</a></li>
-      <li><a href="interests.html">Interests</a></li>
-      <li><a href="contact.html">Contact</a></li>
+      <li><a href="SWD-Website/index.html">Home</a></li>
+      <li><a href="SWD-Website/aboutme.html">About Me</a></li>
+      <li><a href="SWD-Website/interests.html">Interests</a></li>
+      <li><a href="SWD-Website/contact.html">Contact</a></li>
     </ul>
     <div id="interests-content">
       <h2>Places I Would Love to Visit</h2>
