Minor changes to index

--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
 </head>
 <body class="index-body">
   <ul>
-      <li><a href="SWD-Website/index.html">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="SWD-Website/aboutme.html">About Me</a></li>
       <li><a href="SWD-Website/interests.html">Interests</a></li>
       <li><a href="SWD-Website/contact.html">Contact</a></li>
     </ul>
   <div id="home-content">
     <h1><em>Hello</em>, my name is Sydney!</h1>
-    <a href="SWD-Website/aboutme.html">About Me</a>
-    <a href="SWD-Website/interests.html">My Interests</a> <!-- Maybe favourite songs or photo gallery -->
-    <a href="SWD-Website/contact.html">Contact Me</a>
+    <a href="aboutme.html">About Me</a>
+    <a href="interests.html">My Interests</a> <!-- Maybe favourite songs or photo gallery -->
+    <a href="contact.html">Contact Me</a>
   </div>
 </body>
 </html>
